Install burp on macOS